test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/negative_array_dimension.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  -
  const int(3)
  ]
  ;
  return
  const int(0)
  ;
  }
